# infer_mobilenet_ssd

./: .gitignore  CMakeLists.txt  MobileNetSSD.cpp  MobileNetSSD.h  MobileNetSSD.pro  MobileNetSSDGlobal.h  README.md  infer_mobilenet_ssd.pro
Model/: download_model.txt
